2008-10-01  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* src/universal-cp/action-dialog.c:

	Use a message dialog to display action invocation errors rather than a
	warning on the console. Fixes #936.

2008-09-29  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* src/av-cp/playlist-treeview.c:

	Convert the check for top children to be based on the ID of the
	container we browsed rather than the parentID of the DIDL object. We
	should not be assuming that the actual ID of the root container is
	guaranteed to be "0".

2008-09-29  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* src/av-cp/playlist-treeview.c:

	Pass the whole BrowseData to DIDL handling functions rather than just
	ContentDirectory proxy.

2008-09-29  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* src/av-cp/playlist-treeview.c:

	Use BrowseData to keep ref to ContentDirectory proxy.

2008-09-29  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* src/av-cp/gui.c:
	* src/network-light/upnp.c:
	* src/universal-cp/gui.c:

	Don't initialize thread system if it is already initialized.

2008-09-22  Ross Burton  <ross@linux.intel.com>

	* data/Makefile.am:
	Don't install the AV glade and desktop files if AV tools are disabled.

2008-09-22  Ross Burton  <ross@linux.intel.com>

	* src/network-light/upnp.[ch]:
	Fix compile errors (well, warnings after the previous commit).

2008-09-22  Ross Burton  <ross@linux.intel.com>

	* configure.ac:
	Don't ever use -Werror, it's stupid. Just always do -Wall.

2008-09-07  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* NEWS:
	* README:

	Update the NEWS and README files as per the latest changes.

2008-09-06  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* src/network-light/upnp.c:

	Refactor: Put client and server (de)initialization in separate
	functions.

2008-09-06  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* src/network-light/gui.c:
	* src/network-light/upnp.c:

	The UI now controls all network lights on the network, not just itself.
